Fixed the red dots issue on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -3384,7 +3384,7 @@ input::-moz-focus-inner {
 
 .s-header__logo img {
     width: auto;
-    height: 85px;
+    height: 50px;
     margin-bottom: 0;
 }
 
@@ -3821,7 +3821,7 @@ input::-moz-focus-inner {
     display: block;
     content: "";
     height: 10rem;
-    width: 20rem;
+    width: 8rem;
     background-image: url(../images/dots.svg);
     -webkit-transform: translateX(-4rem);
     transform: translateX(-4rem);
